Bug 123874 - The WebKit process dies after inserting image
Summary: The WebKit process dies after inserting image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-05 14:34 UTC by How can I remove my account?
Modified: 2019-03-28 09:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-03-05 14:34:11 UTC
Description:
Insert a photo taken with an iPhone or other normal modern camera, i.e. in the dozen megapixel class.

The photo shows up initially but after a short while the Webkit process crashes (apparently), bringing the app process with it.

Bisection points to commit in 4680707166ebf552b06ee405326cdbf860fac057 in online.

Debugging this is hard. For the JavaScript side, even if you have attached to the 'Online Editor' "web page" on your device in Safari, you don't see anything as that JavaScript console and debugger window goes away, too. 

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 How can I remove my account? 2019-03-05 15:16:37 UTC
The simplest solution would be to just skip the SVG-related functionality for iOS. Unless I can think of something else, that is probably what I will do.
Comment 2 How can I remove my account? 2019-03-05 15:17:23 UTC
Will be interesting to see if the same stuff causes problems in the forthcoming online-based Android app, too.
Comment 3 Henry Castro 2019-03-05 15:26:50 UTC
I agree, we can disable the code for iOS or Android until we find the issue
Comment 4 How can I remove my account? 2019-03-07 12:18:07 UTC
Workaround (disabling the SVG preview for iOS) now in the collabora-online-4 branch: https://cgit.freedesktop.org/libreoffice/online/commit/?h=distro/collabora/collabora-online-4&id=3645a9ce314f5bfafa78f2182084aa43e5e4f34e
Comment 5 How can I remove my account? 2019-03-14 22:09:55 UTC
Marking as resolved, even if it is just a workaround.
Comment 6 Commit Notification 2019-03-28 09:25:50 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/+/421e4a4d8408805b3a6950082d9656085e6157bf%5E%21

tdf#123874: Don't do the SVG preview thing in the iOS app as it crashes WebKit