Show dragging preview on Writer charts

Engine sw, svg: export selected charts and OLE objects in writer_svg_Export

      writer_svg_Export's selection-only path in
      SVGFilter::implExportWriterTextGraphic so far only handled selections
      that supported the TextGraphicObject service (i.e. images).  When a
      chart or any other TextEmbeddedObject was selected, the function
      returned without populating maShapeSelection, and the filter silently
      produced no output.  Online relies on this filter for the chart drag
      preview (rendershapeselection -> doc_renderShapeSelection ->
      storeToURL("private:stream", writer_svg_Export)), so dragging a chart
      in Writer in Online never showed any preview.

      Reading the "Graphic" property via XPropertySet is not an option for
      embedded objects: SwXFrame's FN_UNO_REPLACEMENT_GRAPHIC handler
      expects a SwGrfNode and throws RuntimeException for an SwOLENode.
      Instead, query the selection for XEmbeddedObjectSupplier2 and use
      getReplacementGraphic(); SwXTextEmbeddedObject implements it and
      returns the OLE replacement metafile via SwOLENode::GetGraphic().
      The resulting graphic is wrapped in a temporary SdrGrafObj and added
      to maShapeSelection just like in the existing graphic-shape path.

    Engine sfx2: don't surface in-memory storeTo failures as user export errors

      doc_renderShapeSelection (and a handful of other COKit paths) reuse
      SfxBaseModel::storeToURL with the "private:stream" URL for an
      in-memory render that is never written to disk and is not initiated
      by the user.  When such a store failed, SfxBaseModel::impl_store
      unconditionally fired KIT_CALLBACK_EXPORT_FILE with payload "ERROR".
      ChildSession turns that into "error: cmd=exportas kind=saveasfailed",
      and the browser shows the dialog "Document cannot be exported. Please
      try again." - even though the user never asked for an export.

      Skip the callback when sURL starts with "private:stream", matching
      the existing "private:stream" special-case at the top of impl_store.
      Real File > Download As / File > Export As failures use concrete file
      URLs and still reach the callback exactly as before.

    Online show drag preview of charts in Writer

      Until now MouseControl / ShapeHandlesSection's semi-transparent drag
      preview worked for charts in Calc and Impress but not in Writer:
      charts there are wrapped in a Writer fly (type 601) without an
      isWriterGraphic flag, so the type == 601 && !isWriterGraphic
      "isFrame" guard suppressed the rendershapeselection request and the
      preview never had an SVG to show.

      Drop the guard.  Together with the writer_svg_Export change that
      makes selected charts render as SVG, and the sfxbasemodel guard that
      keeps an internal render failure from popping up as a user-facing
      "Document cannot be exported" dialog, charts in Writer now show the
      same drag preview as in Calc / Impress.  Plain Writer text frames
      (the case the workaround was originally added for, tdf#123874) still
      behave the same way for the user: the kit returns 0 bytes, no
      shapeselectioncontent message is sent, no preview, no dialog.

Signed-off-by: Gülşah Köse <gulsah.kose@collabora.com>
Change-Id: Ie8e2a08cb9cdcb50d6a2516081ce2b3715ddd202
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/1861
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>